--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@mermaid-js/mermaid-cli": "^11.4.2",
     "@types/node": "^20.12.4",
     "prisma": "^5.12.0",
+    "prisma-erd-generator": "^2.0.4",
     "tsup": "^8.0.2",
     "tsx": "^4.7.1",
     "typescript": "^5.4.3"
